--- a/management/templates/management/mint_car.html
+++ b/management/templates/management/mint_car.html
@@ -262,29 +262,40 @@
               </div>
 
               <div class="col-sm-12">
-              <label>Car Tagline</label>
-              <div class="form-group">
-                  <input name="car_headline" type="text" class="form-control" placeholder="Ex: The Porsche 911 isn’t just a car. It’s car history.">
+                <label>Car Tagline</label>
+                <div class="form-group">
+                    <input name="car_headline" type="text" class="form-control" placeholder="Ex: The Porsche 911 isn’t just a car. It’s car history.">
+                </div>
               </div>
-              </div>
+
               <div class="col-sm-12">
-              <label>Car Description</label>
-              <div class="form-group">
-                  <input name="car_description" type="text" class="form-control" placeholder="Ex: The Porsche 911 has undergone a major update for the 2017 model year with an all-new turbocharged engine, standard active dampers, new styling with improved aerodynamics, new safety features, optional rear axle steering, and a new entertainment system.">
+                <label>Car Description</label>
+                <div class="form-group">
+                    <input name="car_description" type="text" class="form-control" placeholder="Ex: The Porsche 911 has undergone a major update for the 2017 model year with an all-new turbocharged engine, standard active dampers, new styling with improved aerodynamics, new safety features, optional rear axle steering, and a new entertainment system.">
+                </div>
+              </div> 
+
+              <div class="col-sm-4">
+                <label>Car Price</label>
+                <div class="form-group">
+                    <input name="car_price" type="text" class="form-control" placeholder="Ex: 200">
+                </div>
               </div>
-              </div>              
-              <div class="col-sm-6">
-              <label>Car Price</label>
-              <div class="form-group">
-                  <input name="car_price" type="text" class="form-control" placeholder="Ex: 200">
+
+              <div class="col-sm-4">
+              <label>Car Horse Power</label>
+                <div class="form-group">
+                    <input name="car_hp" type="text" class="form-control" placeholder="Ex: 300">
+                </div>
               </div>
+
+              <div class="col-sm-4">
+                <label>Car For Sale</label>
+                <div class="form-group">
+                  <input name="car_forsale" type="checkbox" checked data-toggle="toggle">
+                </div>
               </div>
-              <div class="col-sm-6">
-              <label>Car For Sale</label>
-              <div class="form-group">
-                <input name="car_forsale" type="checkbox" checked data-toggle="toggle">
-              </div>
-              </div>
+              
           </div>                  
         </div>
         <br>
